base/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: edo1997edo/backend_app
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops-app
spec:
  selector:
    app: backend
  ports:
    - port: 7000
      targetPort: 7000
