base/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hovhannisyan111/front
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-env
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: frontend-env
          configMap:
            name: frontend-env
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devops-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
