base/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: devops-app
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
